--- a/src/style/index.css
+++ b/src/style/index.css
@@ -30,3 +30,44 @@ body {
     margin: 0 2rem;
   }
 }
+
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
+}
+
+.columns {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.card {
+  background-color: #fff;
+  color: #1c1c1c;
+  padding: 1.5rem;
+  border-radius: 4px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
+}
+
+@media (max-width: 1440px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 980px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
